add blog post titles

--- a/static/html/post.html
+++ b/static/html/post.html
@@ -1,5 +1,5 @@
 {{define "title"}}
-  <title>jackson owens</title>
+  <title>{{ .Post.Title }}</title>
 {{end}}
 {{define "content"}}
   {{ .Post.HTML }}
