--- a/static/html/about.html
+++ b/static/html/about.html
@@ -2,7 +2,7 @@
   <title>jackson owens</title>
 {{end}}
 {{define "content"}}
-  <h1>Haiiii</h1>
+  <h1>Hai</h1>
 
-  <p>I'm a programmer working at <a href="https://chain.com">Chain</a> in San Francisco, CA.</p>
+  <p>I'm a programmer. I work at <a href="https://chain.com">Chain</a> in San Francisco, CA. Before Chain, I worked on the <a href="http://connect.squareup.com">Connect API</a> at Square. And before that, I studied computer science at Brown University.</p>
 {{end}}
