cows, caching and more

--- a/static/html/about.html
+++ b/static/html/about.html
@@ -2,7 +2,14 @@
   <title>jackson owens</title>
 {{end}}
 {{define "content"}}
+  <img src="/static/images/cows.png" alt="Jackson with cows" />
+
   <h1>Hai</h1>
 
   <p>I'm a programmer. I work at <a href="https://chain.com">Chain</a> in San Francisco, CA. Before Chain, I worked on the <a href="http://connect.squareup.com">Connect API</a> at Square. And before that, I studied computer science at Brown University.</p>
+
+  <h2>Projects</h2>
+
+  <p><a href="https://www.github.com/jbowens/nbagame">NBA Game</a> — A golang package for querying the undocumented stats.nba.com API.</p>
+
 {{end}}
