--- a/static/html/about.html
+++ b/static/html/about.html
@@ -6,7 +6,7 @@
 
   <h1>Hai</h1>
 
-  <p>I'm a programmer. I work at <a href="https://chain.com">Chain</a> in San Francisco, CA. Before Chain, I worked on the <a href="http://connect.squareup.com">Connect API</a> at Square. And before that, I studied computer science at Brown University.</p>
+  <p>I'm a programmer living and working in San Francisco, CA. I work as a Systems Engineer at <a href="https://chain.com">Chain</a>, developing software for next-generation financial networks. Before Chain, I worked on the <a href="http://connect.squareup.com">Connect API</a> at Square. Before that, I studied computer science at Brown University.</p>
 
   <h2>Projects</h2>
 
