use the new assets interface

--- a/static/html/layout.html
+++ b/static/html/layout.html
@@ -4,7 +4,7 @@
     <head>
         {{template "title" .}}
         {{ range .IncludeCSS }}
-        <link rel="stylesheet" href="/static/{{ . }}" />
+        <link rel="stylesheet" href="/static/css/{{ . }}" />
         {{ end }}
     </head>
     <body>
