add a couple more projects

--- a/static/html/about.html
+++ b/static/html/about.html
@@ -10,6 +10,8 @@
 
   <h2>Projects</h2>
 
+  <p><a href="https://www.github.com/jbowens/request-catcher">RequestCatcher.com</a> — A tool for debugging HTTP requests.</p>
+  <p><a href="https://www.github.com/jbowens/codenames">Codenames</a> — A Codenames board game implementation.</p>
   <p><a href="https://www.github.com/jbowens/nbagame">NBA Game</a> — A golang package for querying the undocumented stats.nba.com API.</p>
 
 {{end}}
