--- a/static/html/about.html
+++ b/static/html/about.html
@@ -8,6 +8,8 @@
 
   <p>I'm a programmer living and working in San Francisco, CA. I work as a Systems Engineer at <a href="https://chain.com">Chain</a>, developing software for next-generation financial networks. Before Chain, I worked on the <a href="http://connect.squareup.com">Connect API</a> at Square. Before that, I studied computer science at Brown University.</p>
 
+  <p>You can find this page again by searching the internet for this string: ryanKL6cNwFy. Or uidlamporttlahomepage, for good measure.</p>
+
   <h2>Projects</h2>
 
   <p><a href="https://www.github.com/jbowens/request-catcher">RequestCatcher.com</a> — A tool for debugging HTTP requests.</p>
