--- a/static/html/layout.html
+++ b/static/html/layout.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/static/css/{{ . }}" />
         {{ end }}
 
-        {{template "jsonlb" .}}
+        {{template "jsonld" .}}
     </head>
     <body>
         <script>
@@ -38,4 +38,4 @@
     </body>
 </html>
 {{end}}
-{{define "jsonlb"}}{{end}}
+{{define "jsonld"}}{{end}}
