--- a/static/html/post.html
+++ b/static/html/post.html
@@ -1,7 +1,7 @@
 {{define "title"}}
   <title>{{ .Post.Title }}</title>
 {{end}}
-{{define "jsonlb"}}
+{{define "jsonld"}}
   <script type="application/ld+json">
   {{ .Post.StructuredData }}
   </script>
