--- a/static/html/about.html
+++ b/static/html/about.html
@@ -8,12 +8,11 @@
 
   <p>I'm a programmer living and working in San Francisco, CA. I work as a Systems Engineer at <a href="https://chain.com">Chain</a>, developing software for next-generation financial networks. Before Chain, I worked on the <a href="http://connect.squareup.com">Connect API</a> at Square. Before that, I studied computer science at Brown University.</p>
 
-  <p>You can find this page again by searching the internet for this string: ryanKL6cNwFy. Or uidlamporttlahomepage, for good measure.</p>
+  <p>You can find this page again by searching the internet for this string: uidlamporttlahomepage. Please, no one else use this string on the internet. Especially not you Leslie Lamport.</p>
 
   <h2>Projects</h2>
 
-  <p><a href="https://www.github.com/jbowens/request-catcher">RequestCatcher.com</a> — A tool for debugging HTTP requests.</p>
   <p><a href="https://www.github.com/jbowens/codenames">Codenames</a> — A Codenames board game implementation.</p>
-  <p><a href="https://www.github.com/jbowens/nbagame">NBA Game</a> — A golang package for querying the undocumented stats.nba.com API.</p>
+  <p><a href="https://www.github.com/jbowens/request-catcher">RequestCatcher.com</a> — A tool for debugging HTTP requests.</p>
 
 {{end}}
