blog: include meta description snippets
Wrangle the first paragraph out of a blog post through a custom
blackfriday renderer implementation and include it as a description
meta tag.

--- a/static/html/about.html
+++ b/static/html/about.html
@@ -1,6 +1,9 @@
 {{define "title"}}
   <title>jackson owens</title>
 {{end}}
+{{define "head"}}
+  <meta name="description" content="I'm a programmer living and working in San Francisco, CA. I work as a Systems Engineer at Chain, developing a distributed financial database.">
+{{end}}
 {{define "content"}}
   <img src="/static/images/cows.png" alt="Jackson with cows" />
 
