--- a/static/html/layout.html
+++ b/static/html/layout.html
@@ -6,7 +6,9 @@
         {{ range .IncludeCSS }}
         <link rel="stylesheet" href="/static/css/{{ . }}" />
         {{ end }}
-
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        {{template "head" .}}
         {{template "jsonld" .}}
     </head>
     <body>
@@ -39,3 +41,4 @@
 </html>
 {{end}}
 {{define "jsonld"}}{{end}}
+{{define "head"}}{{end}}
