--- a/static/html/layout.html
+++ b/static/html/layout.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/static/css/{{ . }}" />
         {{ end }}
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=720">
         {{template "head" .}}
         {{template "jsonld" .}}
     </head>
