link title to home page

--- a/static/html/layout.html
+++ b/static/html/layout.html
@@ -25,7 +25,7 @@
         <div id="cont">
             <div id="header">
                 <div id="name">
-                    Jackson Owens
+                    <a href="/">Jackson Owens</a>
                 </div>
                 <ul id="nav">
                     <li><a href="/about">About</a></li>
