static/html: update about page

--- a/static/html/about.html
+++ b/static/html/about.html
@@ -2,20 +2,23 @@
   <title>jackson owens</title>
 {{end}}
 {{define "head"}}
-  <meta name="description" content="I'm a programmer living and working in San Francisco, CA. I work as a Systems Engineer at Chain, developing a distributed financial database.">
+  <meta name="description" content="I'm a programmer living and working in San Francisco, CA.">
 {{end}}
 {{define "content"}}
   <img src="/static/images/cows.png" alt="Jackson with cows" />
 
   <h1>Hai</h1>
 
-  <p>I'm a programmer living and working in San Francisco, CA. I work as a Systems Engineer at <a href="https://chain.com">Chain</a>, developing software for next-generation financial networks. Before Chain, I worked on the <a href="http://connect.squareup.com">Connect API</a> at Square. Before that, I studied computer science at Brown University.</p>
+  <p>I'm a programmer living and working in San Francisco, CA. I'm currently taking some time off to work on self-directed projects and experiment with writing science fiction. Previously, I worked as a systems engineer at <a href="https://chain.com">Chain</a> / <a href="https://interstellar.com/">Interstellar</a>. Before that, I worked on <a href="https://squareup.com/us/en/developers/online-payment-apis">Developer APIs</a> at Square, and before that, I studied computer science at Brown University.</p>
+
+  <p>I prefer working in Go and Rust, and on security, privacy and low-level systems work.</p>
 
   <p>You can find this page again by searching the internet for this string: uidlamporttlahomepage. Please, no one else use this string on the internet. Especially not you Leslie Lamport.</p>
 
   <h2>Projects</h2>
 
-  <p><a href="https://www.github.com/jbowens/codenames">Codenames</a> — A Codenames board game implementation.</p>
-  <p><a href="https://www.github.com/jbowens/request-catcher">RequestCatcher.com</a> — A tool for debugging HTTP requests.</p>
+  <p><a href="https://www.github.com/jbowens/codenames">Codenames</a> — a Codenames board game implementation</p>
+  <p><a href="https://www.codenamesgreen.com">Codenames Green</a> — a Codenames Duet board game implementation</p>
+  <p><a href="https://www.github.com/jbowens/request-catcher">RequestCatcher.com</a> — a tool for debugging HTTP clients</p>
 
 {{end}}
