--- a/static/html/about.html
+++ b/static/html/about.html
@@ -2,14 +2,14 @@
   <title>jackson owens</title>
 {{end}}
 {{define "head"}}
-  <meta name="description" content="I'm a programmer living and working in San Francisco, CA.">
+  <meta name="description" content="I'm a programmer living and working in Brooklyn, NY.">
 {{end}}
 {{define "content"}}
   <img src="/static/images/cows.png" alt="Jackson with cows" />
 
   <h1>Hai</h1>
 
-  <p>I'm a programmer living and working in San Francisco, CA. I'm currently taking some time off to work on self-directed projects and experiment with writing science fiction. Previously, I worked as a systems engineer at <a href="https://chain.com">Chain</a> / <a href="https://interstellar.com/">Interstellar</a>. Before that, I worked on <a href="https://squareup.com/us/en/developers/online-payment-apis">Developer APIs</a> at Square, and before that, I studied computer science at Brown University.</p>
+  <p>I'm a programmer living and working in Brooklyn, NY. I'm currently taking some time off to work on self-directed projects and experiment with writing science fiction. Previously, I worked as a systems engineer at <a href="https://chain.com">Chain</a> / <a href="https://interstellar.com/">Interstellar</a>. Before that, I worked on <a href="https://squareup.com/us/en/developers/online-payment-apis">Developer APIs</a> at Square, and before that, I studied computer science at Brown University.</p>
 
   <p>I prefer working in Go and Rust, and on security, privacy and low-level systems work.</p>
 
